<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addRepoFragment.AddRepoFragment">

    <TextView
        android:id="@+id/ownerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/owner_label"
        android:textSize="30sp"
        android:textStyle="bold"
        android:labelFor="@+id/ownerNameEt"/>
    <EditText
        android:id="@+id/ownerNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repo_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownerLabel"/>


    <TextView
        android:id="@+id/repoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/ownerNameEt"
        android:text="@string/repo_label"
        android:textSize="30sp"
        android:textStyle="bold"
        android:labelFor="@+id/repoNameEt" />
    <EditText
        android:id="@+id/repoNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/repo_name"
        app:layout_constraintTop_toBottomOf="@+id/repoLabel"
        />
    <Button
        android:id="@+id/addRepoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_repo_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>